--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include MANIFEST.in
 graft tests
 graft prga/rtlgen/templates
 graft prga/config/bitchain/design/templates
+graft prga_tools/bitchain/simproj/templates
 global-exclude __pycache__
 global-exclude *.pyc
