--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include MANIFEST.in
 graft tests
 graft prga/rtlgen/templates
+graft prga/ysgen/templates
 graft prga/config/bitchain/design/templates
 graft prga_tools/bitchain/simproj/templates
 global-exclude __pycache__
